# ebql

./: Cargo.toml  rustfmt.toml
basic-query/: Cargo.toml
basic-query/src/: main.rs
bpf/: agg.bpf.h.tmpl  bpf_select_itgTr.bpf.c  common.bpf.h  stateful_window.bpf.h.tmpl  syscall_latency.bpf.c  tumbling_window.bpf.h.tmpl  vmlinux.h
bpf-prototype/: Cargo.toml  build.rs
bpf-prototype/src/: main.rs
bpf-prototype/src/bpf/: avg.bpf.h  common.bpf.h  distinct_join.bpf.h  distinct_simple_1.bpf.h  distinct_simple_2.bpf.h  hash.bpf.h  hist.bpf.h  join.bpf.h  join_next.bpf.h  math.bpf.h  simple.bpf.c  simple_1.bpf.c  simple_1.bpf.h  simple_2.bpf.h  sort.bpf.h  sort.bpf.h.tmpl  test.bpf.c  window.bpf.h  window_next.bpf.h
ebql/: Cargo.toml
ebql-client/: Cargo.toml
ebql-client/src/: main.rs
ebql-prototype/: Cargo.toml
ebql-prototype/src/: bpf_gen.rs  bpf_select.rs  bpf_types.rs  code_builder.rs  lib.rs
ebql/src/: compiler.rs  events.rs  lib.rs  pipeline.rs
ebql/src/bpf/: bpf_struct.rs  map.rs  mod.rs  object.rs  prog_builder.rs  program.rs  types.rs
ebql/src/bpf/events/: mod.rs  program_types.rs  system.rs  tracepoints.rs
ebql/src/exec/: bpf_stats.rs  executor.rs  mod.rs  query_stats.rs
ebql/src/query/: logical_plan.rs  mod.rs  operators.rs  parser.rs  physical_plan.rs
ebql/src/query/bpf_ops/: agg.rs  compiler.rs  hist.rs  mod.rs  window.rs
ebql/src/query/bpf_ops/bpf_headers/: agg.bpf.h  agg.bpf.h.tmpl  agg_simple_1.bpf.h  hist.bpf.h.tmpl  tumbling_window.bpf.h.tmpl
ebql/src/schema/: data_types.rs  field.rs  mod.rs  record.rs  record_batch.rs  schema.rs
thesis/: appendix.tex  background.tex  design.tex  evaluation.tex  implementation.tex  introduction.tex  main.tex  references.bib
