[package]
name = "basic-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebql-prototype = { path = "../ebql-prototype" }
anyhow = "1.0.80"
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
libbpf-cargo = "0.22.1"
libbpf-rs = "0.22.1"
libc = "*"
rand = "0.8.5"