[package]
name = "bpf-prototype"
version = "0.1.0"
authors = ["Kuifeng Lee <kuifeng@fb.com>"]
license = "GPL-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.1", features = ["derive"] }
libbpf-rs = "0.22.1"
libc = "*"
nix = "0.28.0"
ebql-prototype = { path = "../ebql-prototype" }
plain = "0.2.3"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
libbpf-cargo = "0.22.1"
