[package]
name = "ebql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
crossbeam = "0.8.4"
lazy_static = "1.4.0"
libbpf-cargo = "0.22.1"
libbpf-rs = "0.22.1"
libc = "*"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
which = "6.0.1"
